# haskell_book

./: .gitignore  README.md  RESOURCES.md
manuscript/: Book.txt  Subset.txt  appendexAtools.md  blackjack.md  book_2nd.txt  brave_search.md  cover.md  database.md  gemini.md  hybrid_haskell_python_coref.md  hybrid_haskell_python_deep_learning.md  hybrid_haskell_python_nlp.md  kgcreator.md  linkeddata.md  machinelearning.md  nlpdatabase.md  nlptool.md  ollama.md  openai.md  pgm.md  preface.md  rdf_sparql.md  section1.md  section2.md  section3.md  stats_prob.md  textprocessing.md  tutorial-applications.md  tutorial-impure.md  tutorial-pure.md  webgemini.md  webscraping.md  wrapup.md
manuscript/resources/: example_type_hierarchy.graffle
preview/: haskell-cookbook-preview.epub  haskell-cookbook-preview.mobi
published/: haskell-cookbook.epub  haskell-cookbook.mobi
source-code/Blackjack/: Blackjack.cabal  Card.hs  Main.hs  README.md  RandomizedList.hs  TUI.hs  Table.hs
source-code/BraveSearch/: BraveSearch.hs  Main.hs
source-code/Database-sqlite/: TestSqLite1.hs
source-code/ImPure/: CommonWords.hs  DoLetExample.hs  FmapExample.hs
source-code/OpenAiApiClient/: GenText.hs
source-code/Pure/: README.md
source-code/WebScraping/: TagSoupTest.hs
source-code/dataframe_example/: NOT_IN_BOOK.md  README.md  cabal.project  dataframe-example.cabal
source-code/dataframe_example/data/: housing.csv  housing_enriched.csv
source-code/dataframe_example/src/: Main.hs
source-code/gemini_commandline/: Main.hs
source-code/knowledge_graph_creator_pure/app/: Main.hs
source-code/knowledge_graph_creator_pure/dev/: Dev.hs  DevSummarize.hs
source-code/knowledge_graph_creator_pure/src/fileutils/: BlackBoard.hs  DirUtils.hs  FileUtils.hs
source-code/knowledge_graph_creator_pure/src/sw/: GenNeo4jCypher.hs  GenTriples.hs
source-code/knowledge_graph_creator_pure/src/toplevel/: Apis.hs
source-code/knowledge_graph_creator_pure/src/webclients/: ClassificationWebClient.hs  CorefWebClient.hs  NlpWebClient.hs
source-code/ollama_commandline/: Main.hs
source-code/rdf_sparql/: RDF_simple_SPARQL.hs  README.md  SimpleRDF.hs  rdf_sparql.cabal
