cabal-version:       2.4
name:                SimpleRDF
version:             0.1.0.0
synopsis:            An in-memory RDF store and SPARQL engine
description:         A simple demonstration of Graph pattern matching using the List Monad.
license:             MIT
author:              Author Name
maintainer:          email@example.com
category:            Database
build-type:          Simple

executable simple-rdf
  -- The main entry point file
  main-is:             SimpleRDF.hs
  
  -- Language extensions used in the code
  -- (You can also keep them as pragmas in the .hs file)
  default-extensions:  OverloadedStrings
                       DeriveGeneric

  -- Dependencies required
  build-depends:       base >= 4.12 && < 5
                     , containers

  -- Modern Haskell standard
  default-language:    Haskell2010
  
  -- Enable optimizations
  ghc-options:         -Wall -O2

executable simple-rdf-with-sparql
  -- The main entry point file
  main-is:             RDF_simple_SPARQL.hs
  
  -- Language extensions used in the code
  -- (You can also keep them as pragmas in the .hs file)
  default-extensions:  OverloadedStrings
                       DeriveGeneric

  -- Dependencies required
  build-depends:       base >= 4.12 && < 5
                     , containers

  -- Modern Haskell standard
  default-language:    Haskell2010
  
  -- Enable optimizations
  ghc-options:         -Wall -O2
